--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+Flask==1.0.2
+numpy==1.15.4
+pandas==0.23.4
+flask_sqlalchemy==2.4.1
+pymongo==3.9.0
 certifi==2019.6.16
 Click==7.0
 cycler==0.10.0
-Flask==1.1.1
-Flask-SQLAlchemy==2.4.0
 gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
@@ -15,6 +18,5 @@ pyparsing==2.4.2
 python-dateutil==2.8.0
 pytz==2019.2
 six==1.12.0
-SQLAlchemy==1.3.7
 Werkzeug==0.15.5
 wincertstore==0.2
